--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "@astrojs/rss": "^4.0.11",
     "@astrojs/sitemap": "^3.3.0",
     "@astrojs/tailwind": "^6.0.2",
+    "@fullcalendar/core": "^6.1.17",
+    "@fullcalendar/daygrid": "^6.1.17",
+    "@fullcalendar/react": "^6.1.17",
     "@radix-ui/react-scroll-area": "^1.1.0",
     "astro": "^5.7.2",
     "astro-auto-import": "^0.4.2",
